Remove invokedynamic-specific targets from build.xml.